Исправления на логотипах соц-сетей

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
             <ul class="works">
            <li class="works-list">
                 <img src="images/destop.jpg" alt="desktop"/>
-                <h2 class="zaglawn works-title">Десктопные приложения</h2>
+                <h2 class="works-title">Десктопные приложения</h2>
             </li>  
             <li class="works-list">            
                 <img src="images/mobi.jpg" alt="mobi"/>
-                <h2 class="zaglawn works-title">Мобильные приложения</h2>
+                <h2 class="works-title">Мобильные приложения</h2>
             </li>
             <li class="works-list">
                 <img src="images/dizain.jpg" alt="dizain">
-                <h2 class="zaglawn works-title">Дизайнерские решения</h2>
+                <h2 class="works-title">Дизайнерские решения</h2>
             </li>
             </ul>
         </section>    
@@ -123,28 +123,28 @@
         <section class="komanda">
             <p class="title-section"><strong>Наша команда</strong></p>
         <div class="container">
-            <ul class="sotrudnik">
-                <li class="sotrudnik-list">  
-                    <div class="fon-sotrudnik">
+            <ul class="partner">
+                <li class="partner-list">  
+                    <div class="fon-partner">
                     <img src="images/djon.jpg" alt="Николай Кучеренко"/>
-                    <h3 class="title-sotrudnik">Николай Кучеренко</h3>
+                    <h3 class="title-partner">Николай Кучеренко</h3>
                     <p class="social-links">Product Designer</p>
                        <ul class="seti">
-                           <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                            <svg width="20px" height="20px" class="icon-sotrudnik">
+                           <li class="partner-seti"><a href="#" class="fon-s">
+                            <svg width="20px" height="20px" class="icon-partner">
                                 <use href="./images/symbol-defs.svg#instagram"></use>
                             </svg>
                            </a></li>
-                           <li class="sotrudnik-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-sotrudnik">
+                           <li class="partner-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-partner">
                             <use href="./images/symbol-defs.svg#twitter"></use>
                         </svg></a></li>
-                           <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                            <svg width="10px" height="20px" class="icon-sotrudnik">
+                           <li class="partner-seti"><a href="#" class="fon-s">
+                            <svg width="10px" height="20px" class="icon-partner">
                                 <use href="./images/symbol-defs.svg#facebook"></use>
                             </svg>
                            </a></li>
-                           <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                            <svg width="20px" height="20px" class="icon-sotrudnik">
+                           <li class="partner-seti"><a href="#" class="fon-s">
+                            <svg width="20px" height="20px" class="icon-partner">
                                 <use href="./images/symbol-defs.svg#linkedin"></use>
                             </svg>
                            </a></li>
@@ -153,81 +153,82 @@
                 </li>
 
 
-                <li class="sotrudnik-list">
-                    <div class="fon-sotrudnik">
+                <li class="partner-list">
+                    <div class="fon-partner">
                         <img src="images/marta.jpg" alt="Ольга Иванова"/>
-                    <h3 class="title-sotrudnik">Ольга Иванова</h3>
+                    <h3 class="title-partner">Ольга Иванова</h3>
                      <p class="social-links">Frontend Developer</p>
                      <ul class="seti">
-                        <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                         <svg width="20px" height="20px" class="icon-sotrudnik">
+                        <li class="partner-seti"><a href="#" class="fon-s">
+                         <svg width="20px" height="20px" class="icon-partner">
                              <use href="./images/symbol-defs.svg#instagram"></use>
                          </svg>
                         </a></li>
-                        <li class="sotrudnik-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-sotrudnik">
+                        <li class="partner-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-partner">
                          <use href="./images/symbol-defs.svg#twitter"></use>
                      </svg></a></li>
-                        <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                         <svg width="10px" height="20px" class="icon-sotrudnik">
+                        <li class="partner-seti"><a href="#" class="fon-s">
+                         <svg width="10px" height="20px" class="icon-partner">
                              <use href="./images/symbol-defs.svg#facebook"></use>
                          </svg>
                         </a></li>
-                        <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                         <svg width="20px" height="20px" class="icon-sotrudnik">
+                        <li class="partner-seti"><a href="#" class="fon-s">
+                         <svg width="20px" height="20px" class="icon-partner">
                              <use href="./images/symbol-defs.svg#linkedin"></use>
                          </svg>
                         </a></li>
                     </ul>
                     </div>
                 </li>   
-                <li class="sotrudnik-list">            
-                <div class="fon-sotrudnik">
+                <li class="partner-list">            
+                <div class="fon-partner">
                     <img src="images/robert.jpg" alt="Андрей Шевченко"/>
-                <h3 class="title-sotrudnik">Андрей Шевченко</h3>
+                <h3 class="title-partner">Андрей Шевченко</h3>
                 <p class="social-links">Marketing</p>
                 <ul class="seti">
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                     <svg width="20px" height="20px" class="icon-sotrudnik">
+                    <li class="partner-seti"><a href="#" class="fon-s">
+                     <svg width="20px" height="20px" class="icon-partner">
                          <use href="./images/symbol-defs.svg#instagram"></use>
                      </svg>
                     </a></li>
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-sotrudnik">
+                    <li class="partner-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-partner">
                      <use href="./images/symbol-defs.svg#twitter"></use>
                  </svg></a></li>
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                     <svg width="10px" height="20px" class="icon-sotrudnik">
+                    <li class="partner-seti"><a href="#" class="fon-s">
+                     <svg width="10px" height="20px" class="icon-partner">
                          <use href="./images/symbol-defs.svg#facebook"></use>
                      </svg>
                     </a></li>
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                     <svg width="20px" height="20px" class="icon-sotrudnik">
+                    <li class="partner-seti"><a href="#" class="fon-s">
+                     <svg width="20px" height="20px" class="icon-partner">
                          <use href="./images/symbol-defs.svg#linkedin"></use>
                      </svg>
                     </a></li>
                 </ul>
                 </div>
                 </li>
-                <li class="sotrudnik-list">
-                <div class="fon-sotrudnik">
+                <li class="partner-list">
+                <div class="fon-partner">
                     <img src="images/martin.jpg" alt="Иван Николаев"/>
-                <h3 class="title-sotrudnik">Иван Николаев</h3>
+                <h3 class="title-partner">Иван Николаев</h3>
                 <p class="social-links">UI Designer</p>
                 <ul class="seti">
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                     <svg width="20px" height="20px" class="icon-sotrudnik">
+                    <li class="partner-seti">
+                        <a href="#" class="fon-s">
+                     <svg width="20px" height="20px">
                          <use href="./images/symbol-defs.svg#instagram"></use>
                      </svg>
                     </a></li>
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s"><svg width="20px" height="16px" class="icon-sotrudnik">
+                    <li class="partner-seti"><a href="#" class="fon-s"><svg width="20px" height="16px">
                      <use href="./images/symbol-defs.svg#twitter"></use>
                  </svg></a></li>
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                     <svg width="10px" height="20px" class="icon-sotrudnik">
+                    <li class="partner-seti"><a href="#" class="fon-s">
+                     <svg width="10px" height="20px">
                          <use href="./images/symbol-defs.svg#facebook"></use>
                      </svg>
                     </a></li>
-                    <li class="sotrudnik-seti"><a href="#" class="fon-s">
-                     <svg width="20px" height="20px" class="icon-sotrudnik">
+                    <li class="partnerseti"><a href="#" class="fon-s">
+                     <svg width="20px" height="20px">
                          <use href="./images/symbol-defs.svg#linkedin"></use>
                      </svg>
                     </a></li>
@@ -299,20 +300,20 @@
             <p class="zaglawn">присоединяйтесь</p>
             <ul class="seti-footer">
                 <li class="soc-seti"><a href="#" aria-label="instagram" class="link-seti">
-                    <svg width="20px" height="20px">
+                    <svg width="20px" height="20px" class="footer-seti">
                         <use href="./images/symbol-defs.svg#instagram"></use>
                     </svg>
                 </a></li>
-                <li class="soc-seti"><a href="#" aria-label="Twitter" class="link-seti"><svg width="20px" height="16px">
+                <li class="soc-seti"><a href="#" aria-label="Twitter" class="link-seti"><svg width="20px" height="16px" class="footer-seti">
                     <use href="./images/symbol-defs.svg#twitter"></use>
                 </svg></a></li>
                 <li class="soc-seti"><a href="#" aria-label="Facebook" class="link-seti">
-                    <svg width="10px" height="20px">
+                    <svg width="10px" height="20px" class="footer-seti">
                         <use href="./images/symbol-defs.svg#facebook"></use>
                     </svg>
                 </a></li>
                 <li class="soc-seti"><a href="#" aria-label="linkedin" class="link-seti">
-                    <svg width="20px" height="20px">
+                    <svg width="20px" height="20px"class="footer-seti">
                         <use href="./images/symbol-defs.svg#linkedin"></use>
                     </svg>
                 </a></li>
