--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,16 @@
               <li class="item"><a href="#" class="navigac">Контакты</a></li>
               </ul>
          
-                   <ul class="adres-nav">
-                   <li class="adres-item"><a href ="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-                   <li class="adres-item"><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+              <ul class="adres-nav">
+                <li class="adres-item"><a href ="mailto:info@devstudio.com" class="contact">
+                    <svg width="16px" height="11px" class="icon-mail">
+                  <use href="./images/symbol-defs.svg#envelope"></use>
+              </svg>
+                    info@devstudio.com</a></li>
+                <li class="adres-item"><a href="tel:+380961111111" class="contact">
+                    <svg width="16px" height="11px" class="icon-mail">
+                  <use href="./images/symbol-defs.svg#smartphone"></use>
+              </svg>+38 096 111 11 11</a></li>
                 </ul>
           </nav>
       </div>  
@@ -199,20 +206,20 @@
           <p class="zaglawn">присоединяйтесь</p>
           <ul class="seti-footer">
               <li class="soc-seti"><a href="#" aria-label="instagram" class="link-seti">
-                  <svg width="20px" height="20px">
+                  <svg width="20px" height="20px" class="footer-seti">
                       <use href="./images/symbol-defs.svg#instagram"></use>
                   </svg>
               </a></li>
-              <li class="soc-seti"><a href="#" aria-label="Twitter" class="link-seti"><svg width="20px" height="16px">
+              <li class="soc-seti"><a href="#" aria-label="Twitter" class="link-seti"><svg width="20px" height="16px" class="footer-seti">
                   <use href="./images/symbol-defs.svg#twitter"></use>
               </svg></a></li>
               <li class="soc-seti"><a href="#" aria-label="Facebook" class="link-seti">
-                  <svg width="10px" height="20px">
+                  <svg width="10px" height="20px" class="footer-seti">
                       <use href="./images/symbol-defs.svg#facebook"></use>
                   </svg>
               </a></li>
               <li class="soc-seti"><a href="#" aria-label="linkedin" class="link-seti">
-                  <svg width="20px" height="20px">
+                  <svg width="20px" height="20px" class="footer-seti">
                       <use href="./images/symbol-defs.svg#linkedin"></use>
                   </svg>
               </a></li>
